// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoadingSpinner > should match snapshot - default size 1`] = `
<svg
  aria-label="Loading"
  class="lucide lucide-loader-circle animate-spin text-pairup-cyan h-6 w-6"
  fill="none"
  height="24"
  role="status"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M21 12a9 9 0 1 1-6.219-8.56"
  />
</svg>
`;

exports[`LoadingSpinner > should match snapshot - large size 1`] = `
<svg
  aria-label="Loading"
  class="lucide lucide-loader-circle animate-spin text-pairup-cyan h-8 w-8"
  fill="none"
  height="24"
  role="status"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M21 12a9 9 0 1 1-6.219-8.56"
  />
</svg>
`;

exports[`LoadingSpinner > should match snapshot - small size 1`] = `
<svg
  aria-label="Loading"
  class="lucide lucide-loader-circle animate-spin text-pairup-cyan h-4 w-4"
  fill="none"
  height="24"
  role="status"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M21 12a9 9 0 1 1-6.219-8.56"
  />
</svg>
`;

exports[`LoadingSpinner > should match snapshot - with custom label 1`] = `
<svg
  aria-label="Custom loading"
  class="lucide lucide-loader-circle animate-spin text-pairup-cyan h-6 w-6"
  fill="none"
  height="24"
  role="status"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M21 12a9 9 0 1 1-6.219-8.56"
  />
</svg>
`;
